# bot_wpp

./: .dockerignore  .env.example  .env.railway.example  .gitattributes  .gitignore  .pylintrc  AGENTS.md  ALINHAMENTO_BOT_HUMANIZADO.md  APRESENTACAO_3MIN.md  ARCHITECTURE.md  BACKLOG.md  BUSINESS_ANALYTICS_ARCHITECTURE.md.backup  BUSINESS_ANALYTICS_MVP.md  CHECKLIST_VALIDACAO.md  Dockerfile  Dockerfile.worker  FLUXO_COMPLETO_PROSPECTO.md  GUIA_RESPOSTAS_HUMANIZADAS.md  PRODUCT.md  README.md  README2.md  SISTEMA_PROCESSAMENTO_MIDIA.md  alembic.ini  auto-commit.ps1  auto-commit.sh  docker-compose.yml  pyproject.toml  railway.json  struture.py
back/: .env.example  .pylintrc  DEMO-GUIA.md  Dockerfile  README.md  alembic.ini  demo-queries.ps1  demo-queries.sh  pyproject.toml  pytest.ini  ruff.toml
back/.context/agents/: architect-specialist.md  backend-specialist.md  bug-fixer.md  code-reviewer.md  database-specialist.md  devops-specialist.md  documentation-writer.md  feature-developer.md  frontend-specialist.md  mobile-specialist.md  performance-optimizer.md  refactoring-specialist.md  security-auditor.md  test-writer.md
back/.context/docs/: README.md  architecture.md  codebase-map.json  data-flow.md  database_drift.md  development-workflow.md  glossary.md  project-overview.md  security.md  testing-strategy.md  tooling.md
back/.context/plans/: README.md  fix-waha-polling-silent-drop.md  solve-debounce-scheduler-issue.md  sync-alembic-with-manual-schema.md
back/.context/skills/: README.md
back/.context/workflow/: actions.jsonl  plans.json  status.yaml
back/alembic/: env.py  script.py.mako
back/alembic/versions/: 439174cb8c5e_sync_conversationmodel.py  6c8e40de2a6f_drop_orphan_models_conversation_context_.py  9d9796c95ff4_increase_phone_number_and_related_.py  a1b2c3d4e5f6_add_unique_constraint_reset_token.py  b7f5a5c7d9e1_make_lead_interactions_user_id_nullable.py  c2f1d8a4b7c9_add_interactiontype_values.py  e75f64ab040b_initial_schema.py
back/docs/: README.md
back/docs/academic/: arquitetura-tecnica.md  casos-teste-validacao.md  roadmap-desenvolvimento.md
back/docs/architecture/: backend-refactoring-plan.md  repository_pattern.md
back/docs/deployment/: railway.md
back/docs/development/: dev-mode-guide.md  linting-fixes.md  logging-guidelines.md  maildev-guide.md
back/scripts/: autoscale_workers.py  cleanup_project.sh  diagnose_health.py  entrypoint.sh  generate_secrets.py  monitor_workers.py  monitor_workers.sh
back/src/robbot/: main.py
back/tests/: DEV-MODE.md  sync-status.sh  test-dev-mode.sh  test_karol_simulation.py
back/tests/api/: README.md  __init__.py  conftest.py  test_01_auth.py  test_02_waha.py  test_03_playbooks.py  test_04_messages.py  test_05_conversations.py  test_06_gemini.py  test_07_escalation.py  test_08_tags.py  test_09_metrics.py  test_10_queues.py  test_11_robustness.py  test_12_security.py  test_13_reports.py  test_14_handoff.py  test_15_waha_full.py  test_message_debug.py
back/tests/fixtures/: ENRICHMENT_VALIDATION.md
back/tests/integration/: test_conversation_analysis_l3.py  (+6 more)
(+555 files in other folders)
