[project]
name = "wpp-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.1",
    "bcrypt==4.1.3",
    "chromadb>=0.4.20",
    "email-validator>=2.3.0",
    "fastapi>=0.121.1",
    "faster-whisper>=1.0.0",
    "httpx>=0.28.1",
    "langchain>=0.1.0",
    "langchain-google-genai>=0.0.6",
    "langchain-groq>=0.1.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.6.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
    "redis-om>=0.2.0",
    "requests>=2.32.5",
    "rq>=1.15.0",
    "sqlalchemy>=2.0.44",
    "tiktoken>=0.5.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "uvicorn[standard]>=0.38.0",
    "pyotp>=2.9.0",
    "reportlab>=4.4.7",
    "openpyxl>=3.1.5",
    "pyyaml>=6.0.3",
    "python-jose[cryptography]>=3.5.0",
    "google-api-core>=2.29.0",
    "passlib[bcrypt]>=1.7.4",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.4.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.5.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
typeCheckingMode = "basic"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportGeneralTypeIssues = false
exclude = ["**/tests/**", "**/alembic/**", "**/__pycache__/**", "**/node_modules/**", "**/.*/**"]

[tool.pylance]
ignore = ["**/tests/**", "**/alembic/**"]
